--- a/exercises/NodeJS_25.2/bonus/package.json
+++ b/exercises/NodeJS_25.2/bonus/package.json
@@ -5,7 +5,8 @@
   "main": "bonus.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "readFile": "node bonus1.js"
+    "readFile": "node bonus1.js",
+    "changeWord": "node bonus2.js"
   },
   "keywords": [],
   "author": "",
