--- a/exercises/Express_25.4/simpsonsApi/package.json
+++ b/exercises/Express_25.4/simpsonsApi/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server",
+  "name": "simpsonsApi",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -11,7 +11,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1"
   },
