--- a/exercises-content/NodeJS_26.1/model_MySQL/model-example/package.json
+++ b/exercises-content/NodeJS_26.1/model_MySQL/model-example/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "mysql2": "^2.3.3-rc.0"
   }
