desenvolvido a rota post /user conforme especificado no exercicio do dia 26.1

--- a/exercises/NodeJS_26.1/package.json
+++ b/exercises/NodeJS_26.1/package.json
@@ -13,5 +13,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongodb": "^4.1.4"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.15"
   }
 }
