construido rota get /cep/:cep do exercicio do dia 26.2

--- a/exercises/NodeJS_26.2/cep-lookup/.eslintrc.json
+++ b/exercises/NodeJS_26.2/cep-lookup/.eslintrc.json
@@ -11,5 +11,7 @@
         "ecmaVersion": 12
     },
     "rules": {
+        "class-methods-use-this":"off",
+        "no-unused-vars": "off"
     }
 }
