--- a/exercises/NodeJS_26.2/cep-lookup/package.json
+++ b/exercises/NodeJS_26.2/cep-lookup/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
+    "joi": "^17.4.2",
     "mysql2": "^2.3.3"
   },
   "devDependencies": {
