adicionado verificação de formato com joi regex, no middleware validFields

--- a/exercises/NodeJS_26.2/cep-lookup/.eslintrc.json
+++ b/exercises/NodeJS_26.2/cep-lookup/.eslintrc.json
@@ -12,6 +12,7 @@
     },
     "rules": {
         "class-methods-use-this":"off",
-        "no-unused-vars": "off"
+        "no-unused-vars": "off",
+        "no-useless-escape":"off"
     }
 }
