implementado para fazer a busca por cep atraves de uma api externa conforme especificado no exercicio bonus do dia 26.2

--- a/exercises/NodeJS_26.2/cep-lookup/package.json
+++ b/exercises/NodeJS_26.2/cep-lookup/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "joi": "^17.4.2",
-    "mysql2": "^2.3.3"
+    "mysql2": "^2.3.3",
+    "node-fetch": "^2.6.6"
   },
   "devDependencies": {
     "eslint": "^8.2.0",
