--- a/exercises/NodeJS_26.2/cep-lookup/.eslintrc.json
+++ b/exercises/NodeJS_26.2/cep-lookup/.eslintrc.json
@@ -11,7 +11,7 @@
         "ecmaVersion": 12
     },
     "rules": {
-        "class-methods-use-this":"off",
+        // "class-methods-use-this":"off", <---use static no metodos sem this
         "no-unused-vars": "off",
         "no-useless-escape":"off"
     }
