--- a/exercises-content/NodeJS_26.4/package.json
+++ b/exercises-content/NodeJS_26.4/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-     "test": "mocha ./tests/**/*$NAME*.test.js --exit"
+    "test": "mocha ./tests/**/*$NAME*.test.js --exit"
   },
   "keywords": [],
   "author": "",
@@ -17,6 +17,7 @@
   "devDependencies": {
     "chai": "^4.3.4",
     "mocha": "^9.1.3",
+    "mongodb-memory-server": "^6.9.6",
     "sinon": "^12.0.1"
   }
 }
