adicionado exercicio do dia 30.4

--- a/exercises/Sockets-IO_30.4/jogo-da-velha/server/package.json
+++ b/exercises/Sockets-IO_30.4/jogo-da-velha/server/package.json
@@ -1,8 +1,9 @@
 {
-  "name": "bonus-mvc",
+  "name": "server",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon index.js"
@@ -11,10 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "ejs": "^3.1.6",
-    "express": "^4.17.2",
     "nodemon": "^2.0.15",
-    "socket.io": "^4.4.1",
-    "socket.io-client": "^4.4.1"
+    "socket.io": "^4.4.1"
   }
 }
